database design added

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 PORT=3000
+DATABASE_URL=postgresql://doadmin:AVNS_jn3YLQZF5fb2oLJnSP4@shah-backend-do-user-13124658-0.b.db.ondigitalocean.com:25060/defaultdb
